# orderbook-challenge

./: .gitignore  Cargo.toml  README.md  doc.sh  profile.sh  profile_heap.sh
.cargo/: config
examples/: client.rs  server.rs
proto/: orderbook.proto
src/: lib.rs  merge.rs  serve.rs
src/input/: deserialize_arrayvec.rs  finite_positive_f64.rs  input_update.rs  level.rs  mod.rs
src/input/sources/: binance.rs  bitstamp.rs  mod.rs
src/proto/: mod.rs
