[package]
authors = ["raycar5 <raycar5@users.noreply.github.com>"]
edition = "2018"
name = "orderbook-challenge"
version = "0.1.0"

[profile.release]
debug = true

[dependencies]
arrayvec = "0.5"
backoff = {git = "https://github.com/ihrwein/backoff.git", rev = "df003285a113e", features = ["tokio"]}
binary-heap-plus = "0.4"
fast-float = "0.2"
futures-util = "0.3"
num_enum = "0.5"
parse-display = "0.4"
prost = "0.7"
serde = "1.0"
simd-json = "0.3"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread", "time"]}
tokio-stream = "0.1"
tokio-tungstenite = {version = "0.13", features = ["tls"]}
tonic = "0.4"
tungstenite = {version = "0.12", features = ["tls"]}
url = "2.2"
variant_count = "1.0"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[build-dependencies]
tonic-build = {version = "0.4", features = ["prost"]}
